# ffmpeg_video_reader

./: CMakeLists.txt  README.md
src/: ffmpegDecode.cpp  ffmpegDecode.h  main.cpp
